--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -7,6 +7,10 @@
   display: none;
 }
 
+#generalResults{
+  display: none;
+}
+
 .buttons{
   border: none;
   text-align: center;
@@ -18,37 +22,29 @@
 @media (max-width: 991px) {
 
   #logo {
-    display: none;
+    width: 30%;
+    text-align: start;
   }
-
-  #logoRes{
-    display: initial;
-    align-self: flex-start;    
-  }
-  
-
-  .sidebar{
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 100;
-    padding: 0;
-    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
-  }
-
-  .sidebar-sticky{
-    position: -webkit-sticky;
-    position: sticky;
-    padding-top: .5rem;
-    overflow-x: hidden;
-    overflow-y: auto;
-  } 
 }
 
-.goCohort{
+#goGeneral{
   border: none;
   font-weight: 700;
   text-transform: uppercase;
   background-color: #ffc107;
+}
+
+.menu{
+  margin: 3px;
+  padding: 3px;
+}
+
+h4{
+  color: #999999;
+  text-transform: uppercase;
+}
+
+p{
+  border: 5px;
+  border-color: black;
 }
