--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -56,12 +56,12 @@ table {
 }
 
 td, th {
-  border: 1px solid #56F89A;
+  border: 1px solid black;
   text-align: left;
   padding: 8px;
-  text-align: center;
+ 
 }
 
-tr:nth-child(even) {
+#titleData {
   background-color: #56F89A;
 }
