--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -24,6 +24,14 @@
   #logo {
     display: none;
   }
+
+  .navbar-toggler{
+    background-color: #ffc107;
+  }
+
+  #navbarNavAltMarkup{
+    background-color: #ffc107;
+  }
 }
 
 #goGeneral{
@@ -43,7 +51,20 @@ h4{
   text-transform: uppercase;
 }
 
-p{
-  border: 5px;
-  border-color: black;
+/*Tabla de datos*/
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid black;
+  text-align: left;
+  padding: 8px;
+ 
+}
+
+#titleData {
+  background-color: #56F89A;
 }
