--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -11,12 +11,11 @@
   display: none;
 }
 
-.buttons{
+button{
   border: none;
   text-align: center;
-  background: white;
-  color: #7F7F7F;
-  width: 100%;
+  background: #ffc107;
+  color: black;
 }
 
 @media (max-width: 991px) {
@@ -49,4 +48,8 @@
 h4{
   color: #999999;
   text-transform: uppercase;
+}
+
+#nameList{
+  border: #999999 1px solid;
 }
