--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,8 +1,4 @@
 /*Estilos propios*/
-#logoRes{
-  display: none;
-}
-
 #search{
   display: none;
 }
@@ -20,6 +16,10 @@ button{
 
 @media (max-width: 991px) {
 
+  .navbar{
+    background-color: #ffc107;
+  }
+
   #logo {
     display: none;
   }
@@ -31,13 +31,6 @@ button{
   #navbarNavAltMarkup{
     background-color: #ffc107;
   }
-}
-
-#goGeneral{
-  border: none;
-  font-weight: 700;
-  text-transform: uppercase;
-  background-color: #ffc107;
 }
 
 .menu{
